app-p3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part3-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: part3
  template:
    metadata:
      labels:
        app: part3
    spec:
      containers:
        - name: part3
          image: wil42/playground:v2
          ports:
            - name: app
              containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: part3-service
  namespace: dev
spec:
  selector:
      app: part3
  ports:
    - port: 8888
      targetPort: app
