service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part3-service
  namespace: dev
spec:
  selector:
      app: part3
  ports:
    - port: 8888
      targetPort: app
